--- a/html/style.css
+++ b/html/style.css
@@ -5,16 +5,23 @@
   }
 @keyframes desvanecer {
     from {opacity: 1;transform: rotate(5deg);}
-    to {opacity: 0.4;transform: rotate(-500deg);}
+    to {opacity: 0.4;transform: rotate(-1500deg);}
   }  
-
+@keyframes cucu {
+    from {margin-left: 100%;width: 300%;}
+    to {margin-left: 0%;width: 100%;}
+  }
 
 body{
     background: linear-gradient(45deg, pink, teal);
     padding: 40px;
     font-family: Roboto;
+    overflow-x: hidden;
 }
-
+.cabezeras{
+    /*overflow: hidden;*/
+}  
+  
 h1{
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     color: white;
@@ -22,21 +29,45 @@ h1{
     background-color: red;
     border-radius: 10px;
     padding: 10px;
+    animation-duration: 12s;
+    animation-name: cucu;
+    animation-delay: 0s;
+    animation-fill-mode: backwards;
 }
 h2{
     background-color: darkorange;
+    animation-duration: 12s;
+    animation-name: cucu;
+    animation-delay: 2s;
+    animation-fill-mode: backwards;
 }
 h3{
     background-color: brown;
+    animation-duration: 12s;
+    animation-name: cucu;
+    animation-delay: 4s;
+    animation-fill-mode: backwards;
 }
 h4{
     background-color: pink;
+    animation-duration: 12s;
+    animation-name: cucu;
+    animation-delay: 6s;
+    animation-fill-mode: backwards;
 }
 h5{
     background-color: green;
+    animation-duration: 12s;
+    animation-name: cucu;
+    animation-delay: 8s;
+    animation-fill-mode: backwards;
 }
 h6{
     background-color: yellow;
+    animation-duration: 12s;
+    animation-name: cucu;
+    animation-delay: 10s;
+    animation-fill-mode: backwards;
 }
 h2, h3, h4, h5, h6{
     font-family: Verdana, Geneva, Tahoma, sans-serif;
@@ -76,7 +107,7 @@ p{
 }
 .enviar{
     animation-name: desvanecer;
-    animation-duration: 2s;
+    animation-duration: 8s;
     animation-iteration-count: infinite;
     animation-direction: alternate;
 }
