--- a/style.css
+++ b/style.css
@@ -164,7 +164,16 @@ body {
         opacity: 0;
     }
 }
+.nav-item {
+    background-color: white;
+    color: black;
+    border-color: rgb(248, 249, 250);
+}
 .nav-item:hover {
+    background-color: rgb(25, 135, 84);
+    color: white;
+}
+.dropdown-item:active{
     background-color: rgb(25, 135, 84);
     color: white;
 }
