--- a/style.css
+++ b/style.css
@@ -6,10 +6,11 @@
 .cabecera {
     background: linear-gradient(rgb(164, 245, 197), rgb(73, 167, 221));
 }
-body {
-    background: linear-gradient(rgb(211, 237, 241), rgb(96, 168, 146));
-}
 */
+body{
+    background: linear-gradient(45deg, rgb(255, 255, 255), rgb(187, 231, 198));
+    overflow-x: hidden;
+}
 .titulo {
     font-family: fantasy;
     font-size: 84px;
@@ -177,3 +178,27 @@ body {
     background-color: rgb(25, 135, 84);
     color: white;
 }
+.nav-link:active{
+    background-color: rgb(25, 135, 84);
+    color: white;
+}
+  @media (min-width: 400px) {
+    .titulo {
+      font-size: 2rem;
+    }
+  }
+  @media (min-width: 500px) {
+    .titulo {
+      font-size: 3rem;
+    }
+  }
+  @media (min-width: 700px) {
+    .titulo {
+      font-size: 4rem;
+    }
+  }
+  @media (min-width: 1100px) {
+    .titulo {
+      font-size: 6rem;
+    }
+  }
