--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,4 +1,30 @@
 html,body{
     width:100%;
     height:100%;
+    color:black;
+}
+
+ul{
+    list-style: none !important;
+    border: none;
+}
+
+li{
+    padding-left: 10px;
+    border-bottom: 1px solid #eee;
+}
+
+.pl-3{
+    padding-left: 20px;
+}
+
+/*h6{
+    width: 250px;
+    padding: 10px;
+    border-bottom: 3px solid rgb(1, 176, 251);
+}*/
+
+.cbtn{
+    background-color:rgb(219, 217, 217);
+    width: 150px;
 }
