--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,20 +1,26 @@
-html,body{
-    width:100%;
-    height:100%;
-    color:black;
+html,
+body {
+    width: 100%;
+    height: 100%;
+    color: rgb(173, 84, 84);
+    position: fixed;
+    background-color: rgb(93, 235, 169);
+    
+
 }
 
-ul{
+ul {
     list-style: none !important;
     border: none;
 }
 
-li{
+li {
     padding-left: 10px;
-    border-bottom: 1px solid #eee;
+    border-bottom: 6px solid #eee;
+    border-left: 6px solid white;
 }
 
-.pl-3{
+.pl-3 {
     padding-left: 20px;
 }
 
@@ -24,7 +30,37 @@ li{
     border-bottom: 3px solid rgb(1, 176, 251);
 }*/
 
-.cbtn{
-    background-color:rgb(219, 217, 217);
+.cbtn {
+    background-color: rgb(219, 217, 217);
     width: 150px;
 }
+
+/*
+.mundo{
+    background: url(https://lh4.googleusercontent.com/-fODt2VWyGek/UM5KhnIfjwI/AAAAAAAAIP4/pp8HVcv6SZY/s727/mapa%2520del%2520mundo%2520-%2520REDEANDO.png) repeat-x 0 0;
+    width: 200px;
+    height: 200px;
+    border-radius: 200px;
+    position: relative;
+    border:1px solid #295fad;
+    animation: turn 25s infinite linear;
+    -webkit-animation: turn 25s infinite linear;
+    box-shadow: 0px 15px 60px rgba(255,255,255,0.5) inset,1em 0px 0px rgba(255,255,255,0.1) inset;
+    }
+    
+    @keyframes turn {
+    0% { background-position: 0 0}
+    50% { background-position: -365px 0;box-shadow: 0px 15px 20px rgba(255,255,255,0.5) inset,25em 0px 80px rgba(0,0,0,0.8) inset;}
+    100% { background-position: -727px 0}
+    }
+    @-webkit-keyframes turn {
+    
+    0% { background-position: 0 0}
+    50% { background-position: -365px 0;box-shadow: 0px 15px 20px rgba(255,255,255,0.5) inset,25em 0px 80px rgba(0,0,0,0.8) inset;}
+    100% { background-position: -727px 0}
+    }
+
+  */
+  
+    
+    
