--- a/styledark.css
+++ b/styledark.css
@@ -38,6 +38,17 @@ body{
     animation-direction: alternate;
     animation-timing-function: ease-in-out;
 }
+.guisiguente{
+    box-shadow: 0px 3px 6px #0c0000;
+    user-select: none;
+}
+.guisiguenteparpadeo{
+    animation-name: respiracion;
+    animation-duration: 0.3s;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
+    animation-timing-function: ease-in-out;
+}
 .navbar{
     background: linear-gradient(90deg, rgba(180, 180, 180, 0), rgb(49, 49, 49));
     color: whitesmoke;
