--- a/styledark.css
+++ b/styledark.css
@@ -111,12 +111,21 @@ body{
     margin-top: -3px;
 }
 .textodatos{
-    font-family: monospace;    
+    font-family: 'Allerta Stencil', sans-serif;    
     text-shadow: 2px 2px 4px #000000;
     color: whitesmoke;
     text-shadow: 2px 2px 4px #000000;
     margin: 0px;
     padding: 50px;
+}
+.textorespuestas{
+    font-family: monospace, sans-serif;
+    text-shadow: 2px 2px 4px #000000;
+    color: white;
+    text-shadow: 2px 2px 4px #000000;
+    margin: 0px;
+    margin-left: 80px;
+    padding: 5px;
 }
 @keyframes girito {
     from {transform: rotate(10deg);}
@@ -245,6 +254,7 @@ body{
 .tarjetabandera{    
     box-shadow: 0px 3px 6px #0c0000;
     width: 400px;
+    max-height: 300px;
     background-color: white;
 }
 .cubod{
