--- a/css/estilo2.css
+++ b/css/estilo2.css
@@ -3,7 +3,7 @@ body {
     width: 100%;
     height: 100%;
     position: fixed;
-    overflow: hidden;
+    overflow-x: hidden;
     background-position: center center;
     background-attachment: fixed;
     background-repeat: no-repeat;
@@ -23,7 +23,6 @@ div, header {
     width: 100px;
     bottom: 97px;
     left: 2px;
-    z-index: 200;
     display: none;
 }
 
@@ -36,6 +35,10 @@ li {
     padding-left: 10px;
     border-bottom: 6px solid rgb(150, 148, 148);
     border-left: 6px solid rgb(134, 133, 133);
+}
+
+.nav-link{
+    color:black;
 }
 
 .pl-3 {
@@ -52,6 +55,8 @@ li {
     background-color: rgb(219, 217, 217);
     width: 150px;
 }
+
+.imagen:hover {filter: grayscale(80%);}
 
 /*
 .mundo{
